--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,11 @@ dependencies {
 
 	//security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	//jwt
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	compileOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	compileOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 }
 
 tasks.named('test') {
