[#6] chore: application.yml에 jwt 관련 설정 추가

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,3 +7,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+jwt:
+  secret-key: ${SECRET_KEY}
+  expiration: 7200
+  refresh-token:
+    expiration: 604800
