[#34] chore: spring actuator 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     compileOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     compileOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+    // spring actuator
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 tasks.named('test') {
