[#34] fix: build 시 copyDocument 실행 전에 processResources 실행하도록 수정

--- a/build.gradle
+++ b/build.gradle
@@ -54,15 +54,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
-tasks.named('test') {
-    useJUnitPlatform()
-}
-
 ext {
     set('snippetsDir', file("build/generated-snippets"))
 }
 
 test {
+    useJUnitPlatform()
     outputs.dir snippetsDir
 }
 
@@ -97,4 +94,5 @@ spotless {
     }
 }
 
+copyDocument.dependsOn processResources
 spotlessJava.dependsOn copyDocument
