--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -13,6 +13,8 @@ spring:
         provider:
           kakao:
             user-info-uri: https://kapi.kakao.com/v2/user/me
+          naver:
+            user-info-uri: https://openapi.naver.com/v1/nid/me
 jwt:
   secret-key: ${SECRET_KEY}
   expiration: 7200
