--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,28 +1,13 @@
 spring:
+  config:
+    activate:
+      on-profile: local
   h2:
     console:
       enabled: true
   jpa:
     hibernate:
       ddl-auto: create
-    open-in-view: false
-    properties:
-      hibernate:
-        show_sql: true
-        format_sql: true
-  security:
-    oauth2:
-      client:
-        provider:
-          kakao:
-            user-info-uri: https://kapi.kakao.com/v2/user/me
-          naver:
-            user-info-uri: https://openapi.naver.com/v1/nid/me
-jwt:
-  secret-key: ${SECRET_KEY}
-  expiration: 7200
-  refresh-token:
-    expiration: 604800
 logging:
   level:
-    com.konggogi.veganlife: debug
+    com.konggogi.veganlife: debug # ref: https://blog.datalust.co/choosing-the-right-log-levels/
