--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,9 @@ spring:
             user-info-uri: https://kapi.kakao.com/v2/user/me
           naver:
             user-info-uri: https://openapi.naver.com/v1/nid/me
+  h2:
+    console:
+      enabled: true
 jwt:
   secret-key: ${SECRET_KEY}
   expiration: 7200
