[#40] chore: VM Arguments에 Amapstruct.defaultComponentModel 옵션 추가

--- a/build.gradle
+++ b/build.gradle
@@ -63,9 +63,18 @@ ext {
     set('snippetsDir', file("build/generated-snippets"))
 }
 
+compileJava {
+    options.compilerArgs += ['-Amapstruct.defaultComponentModel=spring']
+}
+
 test {
     useJUnitPlatform()
     outputs.dir snippetsDir
+    jvmArgs(['-Amapstruct.defaultComponentModel=spring'])
+}
+
+compileTestJava {
+    options.compilerArgs += ['-Amapstruct.defaultComponentModel=spring']
 }
 
 asciidoctor {
