[#43] chore: thymeleaf 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,9 @@ dependencies {
     // map struct
     implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.5.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+
+    // thymeleaf (for restdocs)
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 }
 
 test {
