--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.3'
     id 'org.asciidoctor.jvm.convert' version '3.3.2'
     id 'com.diffplug.spotless' version '6.11.0'
+    id 'jacoco'
 }
 
 group = 'com.konggogi'
@@ -38,6 +39,11 @@ spotless {
         trimTrailingWhitespace()
         endWithNewline()
     }
+}
+
+jacoco {
+    toolVersion = "0.8.8"
+    reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
 }
 
 dependencies {
@@ -82,6 +88,7 @@ dependencies {
 test {
     useJUnitPlatform()
     outputs.dir snippetsDir
+    finalizedBy jacocoTestReport
 }
 
 asciidoctor {
@@ -94,5 +101,29 @@ bootJar { // jar의 templates에 문서 복사
     dependsOn asciidoctor
     from ("${asciidoctor.outputDir}") {
         into 'BOOT-INF/classes/templates'
+    }
+}
+
+jacocoTestReport {
+    reports {
+        html.required  = true
+        xml.required  = false
+        csv.required  = false
+    }
+    dependsOn test
+    finalizedBy 'jacocoTestCoverageVerification'
+}
+
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            element = 'CLASS'
+            enabled = true
+
+            limit {
+                counter = 'LINE'
+                value = 'COVEREDRATIO'
+            }
+        }
     }
 }
