--- a/build.gradle
+++ b/build.gradle
@@ -110,6 +110,23 @@ jacocoTestReport {
         xml.required  = false
         csv.required  = false
     }
+    afterEvaluate {
+        classDirectories.setFrom(
+                files(classDirectories.files.collect {
+                    fileTree(dir: it, excludes: [
+                            "com/konggogi/veganlife/global/**/*",
+                            "com/konggogi/veganlife/**/dto/**",
+                            "**/*Dto*",
+                            "**/*Request*",
+                            "**/*Response*",
+                            "**/*Interceptor*",
+                            "**/*Application*",
+                            "**/*Mapper*",
+                            "**/*Exception*"
+                    ])
+                })
+        )
+    }
     dependsOn test
     finalizedBy 'jacocoTestCoverageVerification'
 }
@@ -123,6 +140,13 @@ jacocoTestCoverageVerification {
             limit {
                 counter = 'LINE'
                 value = 'COVEREDRATIO'
+                //minimum = 0.90
+            }
+
+            limit {
+                counter = 'BRANCH'
+                value = 'COVEREDRATIO'
+                //minimum = 0.90
             }
         }
     }
