[#155] chore: jacocoReport 생성 경로 변경

--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ spotless {
 
 jacoco {
     toolVersion = "0.8.8"
-    reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
+    reportsDirectory = layout.buildDirectory.dir('jacocoReport')
 }
 
 dependencies {
