[#177] chore: batch_fetch_size 관련 property 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
+        default_batch_fetch_size: 1000
   security:
     oauth2:
       client:
