[#270] chore: build 단계에 환경변수 설정

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,6 +37,11 @@ jobs:
       run: chmod +x gradlew
 
     - name: Build with Gradle Wrapper
+      env:
+        MARIA_URL: ${{ secrets.MARIA_URL }}
+        MARIA_USER: ${{ secrets.MARIA_USER }}
+        MARIA_PASSWORD: ${{ secrets.MARIA_PASSWORD }}
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
       run: ./gradlew clean build
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
