--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -63,9 +63,8 @@ jobs:
         MARIA_USER: ${{ secrets.MARIA_USER }}
         MARIA_PASSWORD: ${{ secrets.MARIA_PASSWORD }}
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
-      # test는 PR 올렸을 때 이미 검증이 되었으므로 제외
       run: |
-        ./gradlew clean build -x test
+        ./gradlew clean build
 
     # Dockerfile을 통해 이미지 빌드, Docker hub으로 push
     - name: Docker Build & Push to Docker Repository
