[#1] chore: 워크플로 job 실행순서 설정

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -78,6 +78,7 @@ jobs:
         docker push ${{ secrets.DOCKER_REPO }}/veganlife-dev
 
   deploy:
+    needs: build
     name: Deploy Server via SSH
     runs-on: ubuntu-latest
 
