[#1] chore: 디버깅 위한 코드 추가

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -104,6 +104,7 @@ jobs:
       - name: Move to Workspace
         run: |
           ssh veganlife-dev 'cd veganlife-dev'
+          ssh veganlife-dev 'ls -al'
 
       - name: Docker Compose Down
         run: |
