--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -101,15 +101,11 @@ jobs:
           SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Move to Workspace
-        run: |
-          ssh veganlife-dev 'cd veganlife-dev'
-          ssh veganlife-dev 'ls -al'
-
       - name: Docker Compose Down
+        # home 기준 실행파일의 상대경로를 적어주어야 한다.
         run: |
           echo "Docker Compose Down"
-          ssh veganlife-dev 'docker compose down --rmi all'
+          ssh veganlife-dev 'docker compose -f veganlife-dev/docker-compose.yml down --rmi all'
 
       - name: Set Docker Networks
         run: |
@@ -120,6 +116,5 @@ jobs:
       - name: Docker Compose Up
         run: |
           echo "Docker Compose Up"
-          ssh veganlife-dev 'cd veganlife-dev'
-          ssh veganlife-dev 'docker compose up -d'
+          ssh veganlife-dev 'docker compose -f veganlife-dev/docker-compose.yml up -d'
 
