[#1] chore: 문서 배포 단계 추가

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -38,7 +38,7 @@ jobs:
         MARIA_PASSWORD: ${{ secrets.MARIA_PASSWORD }}
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
       run: |
-        ./gradlew clean build -x test -x asciidoctor
+        ./gradlew clean build
 
     # Dockerfile을 통해 이미지 빌드
     - name: Docker Build
