[#1] chore: 라이브러리를 사용하여 Discord 알림 커스터마이징

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -52,11 +52,13 @@ jobs:
         docker push ${{ secrets.DOCKER_REPO }}/veganlife-dev
 
     - name: Send Notification to Discord - Failure
+      uses: sarisia/actions-status-discord@v1.14.0
       if: failure()  # 배포 성공 시에만 실행
-      run: |
-        curl -X POST -H 'Content-Type: application/json' -d '{"content": "Build 과정에서 문제가 발생했습니다.🥺"}' $DISCORD_WEBHOOK_URL
+      with:
+        webhook: $DISCORD_WEBHOOK_URL
       env:
         DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+
 
   deploy:
     needs: build
@@ -105,11 +107,13 @@ jobs:
           ssh veganlife-dev 'docker system prune -a'
 
       - name: Send Notification to Discord - Failure
+        uses: sarisia/actions-status-discord@v1.14.0
         if: failure()  # 배포 성공 시에만 실행
-        run: |
-          curl -X POST -H 'Content-Type: application/json' -d '{"content": "배포 과정에서 문제가 발생했습니다.🥺"}' $DISCORD_WEBHOOK_URL
+        with:
+          webhook: $DISCORD_WEBHOOK_URL
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+
 
   healthcheck:
     needs: [build, deploy]
@@ -137,15 +141,17 @@ jobs:
           DEV_HEALTHCHECK_URL: ${{ secrets.DEV_HEALTHCHECK_URL }}
 
       - name: Send Notification to Discord - Success
+        uses: sarisia/actions-status-discord@v1.14.0
         if: success()  # 배포 성공 시에만 실행
-        run: |
-          curl -X POST -H 'Content-Type: application/json' -d '{"content": "배포가 성공적으로 완료되었습니다!😄"}' $DISCORD_WEBHOOK_URL
+        with:
+          webhook: $DISCORD_WEBHOOK_URL
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
 
       - name: Send Notification to Discord - Failure
+        uses: sarisia/actions-status-discord@v1.14.0
         if: failure()  # 배포 성공 시에만 실행
-        run: |
-          curl -X POST -H 'Content-Type: application/json' -d '{"content": "Health Check 과정에서 문제가 발생했습니다.🥺"}' $DISCORD_WEBHOOK_URL
+        with:
+          webhook: $DISCORD_WEBHOOK_URL
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
