--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -55,9 +55,7 @@ jobs:
       uses: sarisia/actions-status-discord@v1.14.0
       if: failure()  # 배포 성공 시에만 실행
       with:
-        webhook: $DISCORD_WEBHOOK_URL
-      env:
-        DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+        webhook: ${{ secrets.DISCORD_WEBHOOK_URL }}
 
 
   deploy:
@@ -110,9 +108,7 @@ jobs:
         uses: sarisia/actions-status-discord@v1.14.0
         if: failure()  # 배포 성공 시에만 실행
         with:
-          webhook: $DISCORD_WEBHOOK_URL
-        env:
-          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          webhook: ${{ secrets.DISCORD_WEBHOOK_URL }}
 
 
   healthcheck:
@@ -144,14 +140,10 @@ jobs:
         uses: sarisia/actions-status-discord@v1.14.0
         if: success()  # 배포 성공 시에만 실행
         with:
-          webhook: $DISCORD_WEBHOOK_URL
-        env:
-          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          webhook: ${{ secrets.DISCORD_WEBHOOK_URL }}
 
       - name: Send Notification to Discord - Failure
         uses: sarisia/actions-status-discord@v1.14.0
         if: failure()  # 배포 성공 시에만 실행
         with:
-          webhook: $DISCORD_WEBHOOK_URL
-        env:
-          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          webhook: ${{ secrets.DISCORD_WEBHOOK_URL }}
