--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,12 @@ dependencies {
 
     // rest assured
     testImplementation 'io.rest-assured:rest-assured:5.3.2'
+
+    //QueryDSL
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
+    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
 }
 
 test {
@@ -106,6 +112,8 @@ bootJar { // jar의 templates에 문서 복사
         into 'BOOT-INF/classes/templates'
     }
 }
+
+//jacoco setting
 
 jacocoTestReport {
     reports {
@@ -159,4 +167,19 @@ private excludedClassFilesForReport(classDirectories) {
                 ])
             })
     )
+}
+
+//Querydsl setting
+def querydslDir = layout.buildDirectory.dir("/generated/querydsl")
+
+tasks.withType(JavaCompile) {
+    options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
+}
+
+sourceSets {
+    main.java.srcDirs += [ querydslDir ]
+}
+
+clean {
+    delete file(querydslDir)
 }
