[#test] chore: 테스트

--- a/build.gradle
+++ b/build.gradle
@@ -172,7 +172,7 @@ private excludedClassFilesForReport(classDirectories) {
 //Querydsl setting
 def querydslDir = layout.buildDirectory.dir("/generated/querydsl")
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
 }
 
