--- a/build.gradle
+++ b/build.gradle
@@ -170,9 +170,11 @@ private excludedClassFilesForReport(classDirectories) {
 }
 
 //Querydsl setting
+def generatedDir = layout.buildDirectory.dir("/generated")
 def querydslDir = layout.buildDirectory.dir("/generated/querydsl")
 
 tasks.withType(JavaCompile).configureEach {
+    options.getGeneratedSourceOutputDirectory().set(file(generatedDir))
     options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
 }
 
