--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,13 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
+    - name: Make Directory
+      run: |
+        mkdir -p build/generated/querydsl
+        chmod 777 build/generated/querydsl
+
     - name: Grant execute permission for gradlew
-      run: chmod +rwx gradlew
+      run: chmod +x gradlew
 
     - name: Gradle Compile
       run: ./gradlew compileJava
