[#develop] chore: 루트 디렉토리 자체에 권한 부여

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,10 +31,8 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
-    - name: Make Directory
-      run: |
-        mkdir -p build/generated/querydsl
-        chmod 777 build/generated/querydsl
+    - name: Grant permissions for this directory
+      run: chmod 777 .
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
