--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,13 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
+    - name: Check file permissions
+      run: ls -al
+
     - name: Grant permissions for this directory
-      run: chmod 777 .
+      run: |
+        chmod -R 777 .
+        ls -al
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
