--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -6,7 +6,7 @@ on:
 
 # 코드의 내용을 이 파일을 실행하여 action을 수행하는 주체(Github Actions에서 사용하는 VM)가 읽고 쓸 수 있도록 허용합니다.
 permissions:
-  contents: write
+  contents: read
 
 jobs:
   build:
