--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -122,7 +122,7 @@ jobs:
         env:
           DEV_HEALTHCHECK_URL: ${{ secrets.DEV_HEALTHCHECK_URL }}
 
-      - name: Send Notification to Discord - Success
+      - name: Send Notification to Discord
         uses: sarisia/actions-status-discord@v1.14.0
         if: always()  # 배포 결과 Discord 전송
         with:
