[#289] chore: application.yml springdoc 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,14 @@ jwt:
   expiration: 7200
   refresh-token:
     expiration: 604800
+
+springdoc:
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
+  version: 'v1'
+  swagger-ui:
+    operationsSorter: method
+    disable-swagger-default-url: true
+    path: /api/v1/docs/swagger
+  paths-to-match:
+    - /**
