--- a/build.gradle
+++ b/build.gradle
@@ -124,6 +124,16 @@ openapi3 {
     format = 'yaml'
 }
 
+tasks.withType(GenerateSwaggerUI) {
+    dependsOn 'openapi3'
+
+    delete file('src/main/resources/static/docs/')
+    copy {
+        from "build/resources/main/static/docs"
+        into "src/main/resources/static/docs/"
+    }
+}
+
 //jacoco setting
 
 jacocoTestReport {
