[#300] chore: elasticsearch 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -105,6 +105,9 @@ dependencies {
 
     // S3
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+    //elastic search
+    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
 }
 
 test {
