[#300] feat: ElasticsearchConfig 추가 및 클라이언트 구성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,10 @@ spring:
   h2:
     console:
       enabled: true
+  elasticsearch:
+    host: ${ELASTIC_HOST}
+    username: ${ELASTIC_USER}
+    password: ${ELASTIC_PASSWORD}
 jwt:
   secret-key: ${SECRET_KEY}
   expiration: 7200
