[#develop] infra: sudo 키워드 추가

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -82,23 +82,23 @@ jobs:
         # home 기준 실행파일의 상대경로를 적어주어야 한다.
         run: |
           echo "Docker Compose Down"
-          ssh veganlife-dev 'docker compose -f veganlife-dev/docker-compose.yml down --rmi all'
+          ssh veganlife-dev 'sudo docker compose -f veganlife-dev/docker-compose.yml down --rmi all'
 
       - name: Set Docker Networks
         run: |
           echo "Set Docker Networks"
-          ssh veganlife-dev 'docker network rm deploy'
-          ssh veganlife-dev 'docker network create deploy'
+          ssh veganlife-dev 'sudo docker network rm deploy'
+          ssh veganlife-dev 'sudo docker network create deploy'
 
       - name: Docker Compose Up
         run: |
           echo "Docker Compose Up"
-          ssh veganlife-dev 'docker compose -f veganlife-dev/docker-compose.yml up -d'
+          ssh veganlife-dev 'sudo docker compose -f veganlife-dev/docker-compose.yml up -d'
 
       - name: Clear
         run: |
           echo "Clear"
-          ssh veganlife-dev 'docker system prune -a'
+          ssh veganlife-dev 'sudo docker system prune -a'
 
   healthcheck:
     needs: [build, deploy]
