[#develop] infra: docker login 코드 추가

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -78,6 +78,11 @@ jobs:
           SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
+      - name: Docker Login
+        run: |
+          echo "Docker Login"
+          ssh veganlife-dev 'sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}'
+
       - name: Docker Compose Down
         # home 기준 실행파일의 상대경로를 적어주어야 한다.
         run: |
