[#develop] infra: 버킷 이름 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,6 +48,6 @@ cloud:
     stack:
       auto: false
     s3:
-      bucket: veganlife
+      bucket: ${AWS_BUCKET_NAME}
     cloudfront:
       domain: ${AWS_CLOUDFRONT_DOMAIN}
