[#develop] infra: 워크플로에 환경변수 이름 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,6 +48,6 @@ cloud:
     stack:
       auto: false
     s3:
-      bucket: ${AWS_BUCKET_NAME}
+      bucket: ${AWS_S3_BUCKET_NAME}
     cloudfront:
       domain: ${AWS_CLOUDFRONT_DOMAIN}
