--- a/build.gradle
+++ b/build.gradle
@@ -107,7 +107,8 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
     //elastic search
-    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+    implementation 'org.opensearch.client:spring-data-opensearch:1.2.1'
+    implementation 'org.springframework.data:spring-data-elasticsearch:5.1.12'
 
     //webp
     implementation 'com.sksamuel.scrimage:scrimage-core:4.2.0'
