[#313] chore: CI, 배포 워크플로에 Opensearch 포트 환경변수 추가

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,7 @@ jobs:
         ELASTIC_HOST: ${{ secrets.ELASTIC_HOST }}
         ELASTIC_USER: ${{ secrets.ELASTIC_USER }}
         ELASTIC_PASSWORD: ${{ secrets.ELASTIC_PASSWORD }}
+        ELASTIC_PORT: ${{ secrets.ELASTIC_PORT }}
       run: ./gradlew clean test spotlessCheck
 
     - name: Send Notification to Discord
